# kmnp_project

./: .gitignore  analyze.py  calc_for_nikita.py  calclulate_and_save_d.py  calculate_and_save_current.py  calculate_and_save_d.py  calculate_and_save_transparency.py  constants.py  create_I.py  create_current.py  create_d.py  create_transparency.py  draw_d_graphics.py  draw_transparency_graphics.py  exceptions.py  get_differences_and_draw_graphics.py  get_integral_difference_and_draw_graphics.py  pyproject.toml  result.txt  test.py  update_current_and_draw_graphics.py  utils.py
data_sets/: normalized_current.csv
