[tool.poetry]
name = "kmnp_project"
version = "0.1.0"
description = ""
authors = ["Bazarovinc"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.5.0"
plotly = "^5.4.0"
numpy = "^1.21.4"
scipy = "^1.7.3"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
